<resources>
    <string name="app_name">نورسیس</string>
    <string name="action_settings">تنظیمات</string>

    <string name="title_activity_add_treatment">دوره جدید</string>
    <string name="title_activity_schedule">برنامه روزانه</string>
    <string name="title_activity_select_patient">انتخاب بیمار</string>
    <string name="title_activity_select_service">انتخاب سرویس</string>
    <string name="title_activity_today">برنامه امروز</string>
    <string name="title_activity_treatment">دوره درمان</string>
    <string name="title_activity_session">جلسه</string>
    <string name="title_activity_add_equipment">تجهیزات جدید</string>
    <string name="title_activity_reports">گزارشات</string>
    <string name="title_activity_add_patient">بیمار جدید</string>
    <string name="title_activity_add_insurence"> بیمه</string>
    <string name="title_activity_add_service">سرویس جدید</string>
    <string name="title_activity_select_equipment">انتخاب تجهیزات</string>

    <string name="buttonSchedule">برنامه روزانه</string>
    <string name="buttonAddTreatment">دوره جدید</string>
    <string name="buttonAddEquipment">تجهیزات جدید</string>
    <string name="buttonAddPatient">بیمار جدید</string>
    <string name="buttonAddInsurence">بیمه</string>
    <string name="buttonReports">گزارشات</string>

    <string name="enter_name">لطفا نام را به حروف وارد کنید</string>
    <string name="enter_tell"> شماره تماس خود را به عدد وارد کنید</string>
    <string name="enter_somthing">وارد کردن فیلد الزامی است</string>
    <string name="bime">بیمه تحت پوشش</string>


    <string name="view">مشاهده</string>
    <string name="edit">ویرایش</string>
    <string name="delete">حذف</string>


</resources>
