<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonAddTreatment"
        android:id="@+id/buttonAddTreatment"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="startAddTreatmentActivity" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonAddPatient"
        android:id="@+id/buttonAddPatient"
        android:layout_centerHorizontal="true"
        android:onClick="startAddPatientActivity"
      />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonAddEquipment"
        android:id="@+id/buttonAddEquipment"
        android:layout_centerHorizontal="true"
        android:onClick="startAddEquipmentActivity" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonSchedule"
        android:id="@+id/buttonSchedule"
        android:layout_centerHorizontal="true"
        android:onClick="startScheduleActivity" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonAddInsurence"
        android:id="@+id/buttonAddInsurence"
        android:layout_centerHorizontal="true"
        android:onClick="startAddInsurenceActivity"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonReports"
        android:id="@+id/buttonReports"
        android:layout_centerHorizontal="true"
        android:onClick="startReportsActivity" />

</LinearLayout>
